adicionar painel kanbam do status das adquirentes
